# CivSim

./: .gitignore  .pre-commit-config.yaml  Building.py  Character.py  CivSim.py  Engine.py  Feature.py  Main.py  Map.py  Nation.py  Personality.py  README.md  Resource.py  Settings.py  Tile.py  Timer.py  Unit.py  expanding.txt  main.py  pyproject.toml  requirements.txt  test.py
civsim/: __init__.py  __main__.py  settings.py
civsim/buildings/: __init__.py  city_building.py  improvement.py
civsim/characters/: __init__.py  character.py
civsim/engine/: __init__.py  game_loop.py  input_handler.py  renderer.py
civsim/names/: __init__.py  names.py
civsim/simulation/: __init__.py  ai_strategy.py  nation.py  personality.py
civsim/ui/: __init__.py  button.py  timer.py
civsim/world/: __init__.py  feature.py  map.py  resource.py  terrain.py  tile.py
data/: kingdomNames.txt
include/: NameGen.cpp  countryNameGen.py  nameGen.py
src/: Building.py  Button.py  Character.py  Engine.py  Feature.py  Main.py  Map.py  Names.py  Nation.py  Personality.py  Resource.py  Settings.py  Terrain.py  Tile.py  Timer.py  Unit.py
